// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddressListItem displays duplicate contact warning icon 1`] = `
<div>
  <button
    class="mm-box address-list-item gap-4 mm-box--padding-4 mm-box--display-flex mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
  >
    <div
      class="mm-box mm-badge-wrapper !self-center !flex mm-box--display-inline-block"
    >
      <div
        class="items-center justify-center overflow-hidden bg-section rounded-lg h-8 w-8 flex"
      >
        <div
          class="flex [&>div]:!rounded-none"
        >
          <div
            style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 32px; height: 32px; display: inline-block; background: rgb(3, 73, 94);"
          >
            <svg
              height="32"
              width="32"
              x="0"
              y="0"
            >
              <rect
                fill="#F5D800"
                height="32"
                transform="translate(-2.259751642128839 9.986727856309313) rotate(238.2 16 16)"
                width="32"
                x="0"
                y="0"
              />
              <rect
                fill="#1888F2"
                height="32"
                transform="translate(3.5983407434334205 13.963394795558013) rotate(211.2 16 16)"
                width="32"
                x="0"
                y="0"
              />
              <rect
                fill="#017E8E"
                height="32"
                transform="translate(5.504819407037733 -22.91863393981918) rotate(404.9 16 16)"
                width="32"
                x="0"
                y="0"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-badge-wrapper__badge-container mm-badge-wrapper__badge-container--rectangular-bottom-right"
      >
        <div
          class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-default mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-2 box--border-style-solid"
        >
          <img
            alt="Custom Mainnet RPC logo"
            class="mm-avatar-network__network-image"
            src="./images/eth_logo.svg"
          />
        </div>
      </div>
    </div>
    <div
      class="mm-box mm-box--display-flex mm-box--flex-direction-column"
      style="overflow: hidden;"
    >
      <p
        class="mm-box mm-text address-list-item__label mm-text--body-md-medium mm-text--ellipsis mm-text--text-align-left mm-box--padding-0 mm-box--width-full mm-box--color-text-default"
        data-testid="address-list-item-label"
        style="overflow: hidden;"
      >
        metamask.eth
      </p>
      <div
        class="mm-box mm-text mm-text--body-sm mm-text--ellipsis mm-box--display-flex mm-box--color-text-alternative"
        data-testid="address-list-item-address"
      >
        <div>
          <div
            aria-describedby="tippy-tooltip-7"
            class=""
            data-original-title="0x0c54FcCd2e384b4BB6f2E405Bf5Cbc15a017AaFb"
            data-tooltipped=""
            style="display: inline;"
            tabindex="0"
          >
            0x0c54F...7AaFb
          </div>
        </div>
      </div>
    </div>
    <div
      class="mm-box address-list-item__duplicate-contact-warning-icon"
    >
      <div>
        <div
          aria-describedby="tippy-tooltip-8"
          class=""
          data-original-title="This contact name collides with an existing account or contact"
          data-tooltipped=""
          style="display: inline;"
          tabindex="0"
        >
          <span
            class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-warning-default"
            style="mask-image: url('./images/icons/danger.svg');"
          />
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`AddressListItem renders the address and label without duplicate contact warning icon 1`] = `
<div>
  <button
    class="mm-box address-list-item gap-4 mm-box--padding-4 mm-box--display-flex mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
  >
    <div
      class="mm-box mm-badge-wrapper !self-center !flex mm-box--display-inline-block"
    >
      <div
        class="items-center justify-center overflow-hidden bg-section rounded-lg h-8 w-8 flex"
      >
        <div
          class="flex [&>div]:!rounded-none"
        />
      </div>
      <div
        class="mm-box mm-badge-wrapper__badge-container mm-badge-wrapper__badge-container--rectangular-bottom-right"
      >
        <div
          class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-default mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-2 box--border-style-solid"
        >
          <img
            alt="Custom Mainnet RPC logo"
            class="mm-avatar-network__network-image"
            src="./images/eth_logo.svg"
          />
        </div>
      </div>
    </div>
    <div
      class="mm-box mm-box--display-flex mm-box--flex-direction-column"
      style="overflow: hidden;"
    >
      <p
        class="mm-box mm-text address-list-item__label mm-text--body-md-medium mm-text--ellipsis mm-text--text-align-left mm-box--padding-0 mm-box--width-full mm-box--color-text-default"
        data-testid="address-list-item-label"
        style="overflow: hidden;"
      >
        metamask.eth
      </p>
      <div
        class="mm-box mm-text mm-text--body-sm mm-text--ellipsis mm-box--display-flex mm-box--color-text-alternative"
        data-testid="address-list-item-address"
      >
        <div>
          <div
            aria-describedby="tippy-tooltip-1"
            class=""
            data-original-title="0x0c54FcCd2e384b4BB6f2E405Bf5Cbc15a017AaFb"
            data-tooltipped=""
            style="display: inline;"
            tabindex="0"
          >
            0x0c54F...7AaFb
          </div>
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`AddressListItem uses a confusable when it should 1`] = `
<div>
  <button
    class="mm-box address-list-item gap-4 mm-box--padding-4 mm-box--display-flex mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
  >
    <div
      class="mm-box mm-badge-wrapper !self-center !flex mm-box--display-inline-block"
    >
      <div
        class="items-center justify-center overflow-hidden bg-section rounded-lg h-8 w-8 flex"
      >
        <div
          class="flex [&>div]:!rounded-none"
        >
          <div
            style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 32px; height: 32px; display: inline-block; background: rgb(3, 73, 94);"
          >
            <svg
              height="32"
              width="32"
              x="0"
              y="0"
            >
              <rect
                fill="#F5D800"
                height="32"
                transform="translate(-2.259751642128839 9.986727856309313) rotate(238.2 16 16)"
                width="32"
                x="0"
                y="0"
              />
              <rect
                fill="#1888F2"
                height="32"
                transform="translate(3.5983407434334205 13.963394795558013) rotate(211.2 16 16)"
                width="32"
                x="0"
                y="0"
              />
              <rect
                fill="#017E8E"
                height="32"
                transform="translate(5.504819407037733 -22.91863393981918) rotate(404.9 16 16)"
                width="32"
                x="0"
                y="0"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-badge-wrapper__badge-container mm-badge-wrapper__badge-container--rectangular-bottom-right"
      >
        <div
          class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-default mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-2 box--border-style-solid"
        >
          <img
            alt="Custom Mainnet RPC logo"
            class="mm-avatar-network__network-image"
            src="./images/eth_logo.svg"
          />
        </div>
      </div>
    </div>
    <div
      class="mm-box mm-box--display-flex mm-box--flex-direction-column"
      style="overflow: hidden;"
    >
      <p
        class="mm-box mm-text address-list-item__label mm-text--body-md-medium mm-text--ellipsis mm-text--text-align-left mm-box--padding-0 mm-box--width-full mm-box--color-text-default"
        data-testid="address-list-item-label"
        style="overflow: hidden;"
      >
        <span
          class=""
        >
          <div
            aria-describedby="tippy-tooltip-2"
            class=""
            data-original-title="'m' is similar to 'rn'."
            data-tooltipped=""
            style="display: inline;"
            tabindex="0"
          >
            <span
              class="mm-box mm-text confusable__point mm-text--body-md mm-box--color-text-default"
            >
              m
            </span>
          </div>
        </span>
        e
        t
        a
        <span
          class=""
        >
          <div
            aria-describedby="tippy-tooltip-3"
            class=""
            data-original-title="'m' is similar to 'rn'."
            data-tooltipped=""
            style="display: inline;"
            tabindex="0"
          >
            <span
              class="mm-box mm-text confusable__point mm-text--body-md mm-box--color-text-default"
            >
              m
            </span>
          </div>
        </span>
        a
        s
        k
        .
        e
        t
        h
      </p>
      <div
        class="mm-box mm-text mm-text--body-sm mm-text--ellipsis mm-box--display-flex mm-box--color-text-alternative"
        data-testid="address-list-item-address"
      >
        <div>
          <div
            aria-describedby="tippy-tooltip-4"
            class=""
            data-original-title="0x0c54FcCd2e384b4BB6f2E405Bf5Cbc15a017AaFb"
            data-tooltipped=""
            style="display: inline;"
            tabindex="0"
          >
            0x0c54F...7AaFb
          </div>
        </div>
      </div>
    </div>
  </button>
</div>
`;
